--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -33,79 +33,100 @@
       margin-bottom: 10px;
       color: #198754;
     }
+    .toast-container {
+      position: fixed;
+      top: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 9999;
+    }
   </style>
 </head>
 <body>
 <div class="text-end mb-3">
   <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
 </div>
-  <div class="container">
-    <h2 class="text-center mb-5">لوحة التحكم الرئيسية</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">➕</div>
-          <a href="add.html">إضافة فيديو</a>
-        </div>
 
-
+<div class="container">
+  <h2 class="text-center mb-5">لوحة التحكم الرئيسية</h2>
+  <div class="row g-4">
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">➕</div>
+        <a href="add.html">إضافة فيديو</a>
       </div>
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">✏️</div>
-          <a href="edit.html">تعديل الفيديوهات</a>
-        </div>
+    </div>
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">✏️</div>
+        <a href="edit.html">تعديل الفيديوهات</a>
       </div>
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">📁</div>
-          <a href="backups.html">النسخ الاحتياطية</a>
-        </div>
+    </div>
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">📁</div>
+        <a href="backups.html">النسخ الاحتياطية</a>
       </div>
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">🏠</div> 
-          <a href="index.html">الرئيسية</a>
-        </div>
+    </div>
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">🏠</div> 
+        <a href="index.html">الرئيسية</a>
       </div>
-<!-- here-->
- <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">🔑</div> 
-          <a href="passwords.html">كلمات المرور</a>
-        </div>
+    </div>
+    <!-- كلمات المرور -->
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">🔑</div> 
+        <a href="passwords.html">كلمات المرور</a>
       </div>
-<!-- end here-->
-<!-- here-->
- <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">👁️</div> 
-          <a href="viewlinks.html">عرض الروابط</a>
-        </div>
+    </div>
+    <!-- عرض الروابط -->
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">👁️</div> 
+        <a href="viewlinks.html">عرض الروابط</a>
       </div>
-<!-- end here-->
-      <div class="col-md-4">
-        <div class="dashboard-card">
-          <div class="card-icon">🔗</div>
-          <a href="links.html">إدارة الروابط</a>
-        </div>
+    </div>
+    <div class="col-md-4">
+      <div class="dashboard-card">
+        <div class="card-icon">🔗</div>
+        <a href="links.html">إدارة الروابط</a>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- ✅ نافذة تسجيل الدخول -->
-  <div id="loginModalContainer"></div>
+<!-- ✅ نافذة تسجيل الدخول -->
+<div id="loginModalContainer"></div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="login-guard.js"></script>
- <script>
-  document.getElementById("logoutBtn").addEventListener("click", () => {
-    // 🧹 مسح الجلسة الخاصة بلوحة التحكم فقط
-    sessionStorage.removeItem("loggedInAt_dashboard");
+<!-- ✅ Toast Container -->
+<div class="toast-container" id="toastContainer"></div>
 
-    // 🔄 التوجيه إلى الصفحة الرئيسية
-    window.location.href = "index.html";
-  });
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="login-guard.js"></script>
+<script>
+// 🟢 دالة عرض Toast مع أيقونة
+function showToast(message, type="success") {
+  let icon = type === "success" ? "✅" : type === "danger" ? "❌" : "ℹ️";
+  const toast = document.createElement('div');
+  toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
+  toast.setAttribute('role', 'alert');
+  toast.innerHTML = `
+    <div class="d-flex">
+      <div class="toast-body">${icon} ${message}</div>
+      <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast"></button>
+    </div>`;
+  document.getElementById('toastContainer').appendChild(toast);
+  new bootstrap.Toast(toast, { delay: 2000 }).show();
+}
+
+// 🟠 تسجيل الخروج مع Toast
+document.getElementById("logoutBtn").addEventListener("click", () => {
+  sessionStorage.removeItem("loggedInAt_dashboard");
+  showToast("تم تسجيل الخروج بنجاح", "success");
+  setTimeout(() => window.location.href = "index.html", 1500);
+});
 </script>
 
 </body>
