--- a/public/passwords.html
+++ b/public/passwords.html
@@ -19,7 +19,6 @@
   <button id="logoutBtn" class="btn btn-danger">تسجيل الخروج</button>
 </div>
 
-
 <div class="container">
   <h2 class="mb-4">🔑 إدارة كلمات المرور</h2>
 
@@ -50,7 +49,6 @@
       <tr>
         <th>القسم</th>
         <th>كلمة المرور</th>
-  <!--      <th>تاريخ الإضافة</th> -->
         <th>إجراءات</th>
       </tr>
     </thead>
@@ -131,7 +129,6 @@ function renderPasswords(list) {
         <input type="password" value="${p.password}" class="form-control form-control-sm pw-field" readonly>
         <button class="btn btn-sm btn-link toggle-pw">👁</button>
       </td>
-     
       <td>
         <button class="btn btn-warning btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
         <button class="btn btn-danger btn-sm" onclick="deletePassword('${p._id}')">🗑️ حذف</button>
@@ -209,19 +206,20 @@ document.getElementById('togglePassword').addEventListener('click', () => {
 });
 
 // زر لوحة التحكم
-  document.getElementById("dashboardBtn").addEventListener("click", () => {
-    window.location.href = "dashboard.html";
-  });
-  
-// تسجيل الخروج
+document.getElementById("dashboardBtn").addEventListener("click", () => {
+  window.location.href = "dashboard.html";
+});
+
+// تسجيل الخروج مع Toast والتوجيه بعد 1.5 ثانية
 document.getElementById("logoutBtn").addEventListener("click", () => {
   sessionStorage.removeItem("loggedInAt_passwords");
-  window.location.href = "index.html";
+  showToast("✅ تم تسجيل الخروج بنجاح", "success");
+  setTimeout(() => {
+    window.location.href = "index.html";
+  }, 1500);
 });
 
 loadPasswords();
 </script>
-
-  
 </body>
 </html>
