--- a/public/passwords.html
+++ b/public/passwords.html
@@ -84,6 +84,25 @@
   </div>
 </div>
 
+<!-- نافذة تأكيد الحذف -->
+<div class="modal fade" id="confirmDeleteModal" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger text-white">
+        <h5 class="modal-title">تأكيد الحذف</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        هل أنت متأكد أنك تريد حذف هذه الكلمة السرية؟
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+        <button type="button" class="btn btn-danger" id="confirmDeleteBtn">🗑️ حذف</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Toast -->
 <div class="toast-container" id="toastContainer"></div>
 
@@ -95,6 +114,7 @@
 <script>
 const API_URL = '/api/passwords';
 let allPasswords = [];
+let deleteTargetId = null;
 
 // دالة عرض Toast
 function showToast(message, type="success") {
@@ -131,7 +151,7 @@ function renderPasswords(list) {
       </td>
       <td>
         <button class="btn btn-warning btn-sm" onclick="openEditModal('${p._id}', '${p.section}', '${p.password}')">✏️ تعديل</button>
-        <button class="btn btn-danger btn-sm" onclick="deletePassword('${p._id}')">🗑️ حذف</button>
+        <button class="btn btn-danger btn-sm" onclick="confirmDelete('${p._id}')">🗑️ حذف</button>
       </td>
     `;
     table.appendChild(tr);
@@ -184,13 +204,22 @@ document.getElementById('editPasswordForm').addEventListener('submit', async (e)
   bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
 });
 
-// حذف كلمة مرور
-async function deletePassword(id) {
-  if (!confirm('هل أنت متأكد من الحذف؟')) return;
-  await fetch(`${API_URL}/${id}`, { method: 'DELETE' });
-  showToast("🗑️ تم الحذف بنجاح", "danger");
-  loadPasswords();
+// فتح نافذة تأكيد الحذف
+function confirmDelete(id) {
+  deleteTargetId = id;
+  new bootstrap.Modal(document.getElementById('confirmDeleteModal')).show();
 }
+
+// تنفيذ الحذف بعد التأكيد
+document.getElementById('confirmDeleteBtn').addEventListener('click', async () => {
+  if (deleteTargetId) {
+    await fetch(`${API_URL}/${deleteTargetId}`, { method: 'DELETE' });
+    showToast("🗑️ تم الحذف بنجاح", "danger");
+    loadPasswords();
+    bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal')).hide();
+    deleteTargetId = null;
+  }
+});
 
 // فلترة
 document.getElementById('searchBox').addEventListener('input', e => {
