--- a/public/links.html
+++ b/public/links.html
@@ -23,7 +23,14 @@
     .table th:nth-child(4), .table td:nth-child(4) { width: 120px; text-align: center; }
     .table th:nth-child(5), .table td:nth-child(5) { width: 260px; }
     .action-buttons { display: flex; gap: 8px; justify-content: center; }
-    .toast-container { position: fixed; top: 20px; left: 50%; transform: translateX(-50%); z-index: 9999; }
+    /* ✅ مكان التوست أعلى الصفحة بالوسط */
+    .toast-container { 
+      position: fixed; 
+      top: 20px; 
+      left: 50%; 
+      transform: translateX(-50%); 
+      z-index: 9999; 
+    }
   </style>
 </head>
 <body>
@@ -78,12 +85,31 @@
   <!-- ✅ نافذة تسجيل الدخول -->
   <div id="loginModalContainer"></div>
 
-  <!-- ✅ Toast -->
+  <!-- ✅ حاوية التوست -->
   <div class="toast-container" id="toastContainer"></div>
+
+  <!-- ✅ مودال تأكيد الحذف -->
+  <div class="modal fade" id="confirmDeleteModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header bg-danger text-white">
+          <h5 class="modal-title">تأكيد الحذف</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">هل أنت متأكد أنك تريد حذف هذا الرابط؟</div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">إلغاء</button>
+          <button type="button" id="confirmDeleteBtn" class="btn btn-danger">حذف</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // ✅ دالة التوست
+    let deleteId = null;
+
+    /* ✅ (1) دالة التوست العامة */
     function showToast(message, type="success") {
       const toast = document.createElement('div');
       toast.className = `toast align-items-center text-bg-${type} border-0 mb-2`;
@@ -114,7 +140,7 @@
             <td>
               <div class="action-buttons">
                 <i class="bi bi-pencil-square text-warning fs-5" style="cursor:pointer;" onclick='editLink(${JSON.stringify(link)})'></i>
-                <i class="bi bi-trash-fill text-danger fs-5" style="cursor:pointer;" onclick="deleteLink('${link._id}')"></i>
+                <i class="bi bi-trash-fill text-danger fs-5" style="cursor:pointer;" onclick="prepareDelete('${link._id}')"></i>
                 <i class="bi bi-arrow-up-circle-fill text-info fs-5" style="cursor:pointer;" onclick="moveLink('${link._id}','up')"></i>
                 <i class="bi bi-arrow-down-circle-fill text-secondary fs-5" style="cursor:pointer;" onclick="moveLink('${link._id}','down')"></i>
               </div>
@@ -133,16 +159,24 @@
       document.getElementById('addLinkForm').style.display = 'block';
     }
 
-    async function deleteLink(id) {
-      if (!confirm('هل أنت متأكد من الحذف؟')) return;
-      const res = await fetch(`/api/links/${id}`, { method: 'DELETE' });
+    function prepareDelete(id) {
+      deleteId = id;
+      const modal = new bootstrap.Modal(document.getElementById('confirmDeleteModal'));
+      modal.show();
+    }
+
+    document.getElementById('confirmDeleteBtn').addEventListener('click', async () => {
+      if (!deleteId) return;
+      const res = await fetch(`/api/links/${deleteId}`, { method: 'DELETE' });
       if (res.ok) {
         showToast("🗑️ تم الحذف بنجاح", "danger");
         loadLinks();
       } else {
         showToast("❌ فشل في الحذف", "danger");
       }
-    }
+      deleteId = null;
+      bootstrap.Modal.getInstance(document.getElementById('confirmDeleteModal')).hide();
+    });
 
     async function moveLink(id, direction) {
       const res = await fetch(`/api/links/${id}/move`, {
